# obazl_llvm

./: .bazelrc  .gitignore  MODULE.bazel  README.adoc  README.md
demos/clang/c/: .bazelrc  BUILD.bazel  MODULE.bazel  foo.ast  foo.c  foo.pch
demos/clang/c/demo1/: BUILD.bazel  demo1.c  foo.ast
demos/clang/c/demo2/: BUILD.bazel  demo2.cc  foo.cc  header.hpp
demos/clang/c/hello/: BUILD.bazel  hello.c
demos/llvm/c/: .bazelrc  BUILD.bazel  MODULE.bazel
demos/llvm/c/hello/: BUILD.bazel  hello.c
demos/llvm/c/sum/: BUILD.bazel  sum.c
extensions/: llvm.bzl
extensions/subrepos/: clang_c_sdk.bzl  llvm.bzl  llvm_c_sdk.bzl  llvm_ocaml_sdk.bzl  llvm_tools.bzl
extensions/templates/: BUILD.lib_pkg  adapter.bzl  adapters.BUILD  bin.BUILD  clang_libs.BUILD  features.bzl  include.BUILD  lib.BUILD  selector.bzl  tc_linklibs.BUILD  toolchain.BUILD
toolchain/: NOTES.txt  TOOLCHAINS  toolchains.adoc
toolchain/actions/: sample.bzl
